# appy

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
appy-macros/: Cargo.toml
appy-macros/src/: appy_main.rs  apx.rs  component.rs  component_builder.rs  derive_component.rs  function_component.rs  lib.rs  main_window.rs  snake_factory.rs
examples/: hello-button.rs  hello.rs  noxml.rs  test-anim.rs  test-bg.rs  test-flow.rs  test-key.rs  test-reducer.rs
examples/anim/: Cargo.toml
examples/anim/src/: main.rs
examples/calculator/: Cargo.toml  calculator_model.rs  main.rs
examples/calculator/src/: calculator_model.rs  main.rs
examples/flow-test/: Cargo.toml
examples/flow-test/src/: main.rs
examples/font/: main.rs
examples/hello/: Cargo.toml
examples/hello-button/: Cargo.toml
examples/hello-button/src/: main.rs
examples/hello/src/: main.rs
examples/img/: main.rs
examples/img-test/: Cargo.toml
examples/img-test/src/: main.rs
examples/key-test/: Cargo.toml
examples/key-test/src/: main.rs
examples/lab/: Cargo.toml
examples/lab/src/: main.rs
examples/noxml/: Cargo.toml
examples/noxml/src/: main.rs
examples/reducer-test/: Cargo.toml
examples/reducer-test/src/: main.rs
examples/test-bg/: Cargo.toml
examples/test-bg/src/: main.rs
examples/test-glutin/: Cargo.toml
examples/test-glutin/src/: main.rs
examples/test-sdl/: Cargo.toml
examples/test-sdl/src/: main.rs
platform-examples/test-glutin/: Cargo.toml
src/: lib.rs  tests.rs
src/appy/: app_context.rs  appy.rs  component.rs  element.rs  hooks.rs  mod.rs  render_env.rs
src/cl/: bin.rs
src/components/: bg.rs  blk.rs  context_provider.rs  flow.rs  grid.rs  img.rs  interaction.rs  mod.rs  text.rs  window.rs
src/core/: app_context.rs  component.rs  element.rs  hooks.rs  mod.rs
src/hooks/: mod.rs  use_reducer.rs  use_spring.rs
src/sys/: app_event.rs  app_window.rs  app_window_glutin.rs  app_window_sdl.rs  mod.rs
src/types/: app_context.rs  block_context.rs  dim.rs  element.rs  font.rs  font_face.rs  image_source.rs  mod.rs  rect.rs
src/utils/: android_log_thread.rs  array_buffer.rs  cb.rs  export.rs  flow_bucket.rs  font_util.rs  glutil.rs  image_renderer.rs  log.rs  mod.rs  rect.rs  rect_renderer.rs  shader_program.rs  text_renderer.rs  trigger.rs  with_clone.rs
