[package]
name="appy"
version="0.1.5"
edition="2021"
description="Declarative UI framework with native rendering"
documentation = "https://docs.rs/appy"
homepage = "https://github.com/limikael/appy"
repository = "https://github.com/limikael/appy"
license = "MIT"

[lib]
name="appy"
path="src/lib.rs"

[dependencies]
appy-macros = {version="0.1.5", path="./appy-macros"}
glapp={version="0.1.1", path="../glapp"}
nalgebra-glm = {version="0.18.0"}
rusttype = {version="0.9.3"}
environmental = "1.1.4"
image = {version="0.24.6",default-features=false,features=["png","jpeg"]}

[features]
#default=["sdl"]
sdl=["glapp/sdl"]
glutin=["glapp/glutin"]
