[package]
name="appy"
version="0.1.6"
edition="2021"
description="Declarative UI framework with native rendering"
documentation = "https://docs.rs/appy"
homepage = "https://github.com/limikael/appy"
repository = "https://github.com/limikael/appy"
license = "MIT"

[package.metadata.android]
package_name="dev.wayan.calculator"
title="Appy Calculator"

[lib]
name="appy"
path="src/lib.rs"
doctest=false

[dependencies]
appy-macros = {version="0.1.6", path="./appy-macros"}
glapp={version="0.1.3"}
nalgebra-glm = {version="0.18.0"}
rusttype = {version="0.9.3", features=["gpu_cache"]}
environmental = "1.1.4"

# jpeg turned off since it caused comilation error (error: Unrecognized option: 'diagnostic-width')
image = {version="0.24.6",default-features=false,features=["png"]}

[dev-dependencies]
rand = "0.8.5"

[features]
default=["sdl"]
sdl=["glapp/sdl"]
glutin=["glapp/glutin"]
