[package]
name="appy-macros"
version="0.1.0"
edition="2021"
description="Macros for appy, a declarative UI framework"
documentation = "https://docs.rs/appy"
homepage = "https://github.com/limikael/appy"
repository = "https://github.com/limikael/appy"
license = "MIT"

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "1", features = ["full"] }
syn-rsx = "0.9.0"
toml = "0.7.3"

[features]
sdl=[]
glutin=[]
