[package]
name = "img-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
appid="com.example.img"
appname="Hello Img"

[lib]
path="src/main.rs"
crate-type=["cdylib"]

[dependencies]
appy = {path="../..",features=["sdl"]}
#appy = {path="../..",features=["glutin"]}
